--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
 spring.application.name=cantinhodocerrado
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/cantinhodocerrado
-spring.datasource.username=root
-spring.datasource.password=
+# configuração do banco de dados desenvolviemento local
+# spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/cantinhodocerrado
+# spring.datasource.username=root
+# spring.datasource.password=
 
-spring.jpa.show-sql=true
-logging.level.org.springframework.web=trace
+
+# Configuração do driver e outras propriedades JPA
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+
+spring.jpa.show-sql=false
+logging.level.org.springframework.web=ERROR
