--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,6 @@ spring.datasource.hikari.maximum-pool-size=5  # ou outro número menor
 
 
 
-spring.jpa.show-sql=false
-logging.level.org.springframework.web=ERROR
+spring.jpa.show-sql=true
+logging.level.org.springframework.web=TRACE
+logging.level.org.hibernate=TRACE
