--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.application.name=cantinhodocerrado
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.dat'asource.hikari.maximum-pool-size=5  # ou outro número menor
+spring.datasource.hikari.maximum-pool-size=5  # ou outro número menor
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
 
 
