Change logging level for Spring and Hibernate to DEBUG

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.hikari.maximum-pool-size=5  # ou outro número menor
 
 spring.jpa.show-sql=true
-logging.level.org.springframework.web=TRACE
-logging.level.org.hibernate=TRACE
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=DEBUG
