--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,17 @@
 spring.application.name=cantinhodocerrado
 
 # configuração do banco de dados desenvolviemento local
-# spring.jpa.hibernate.ddl-auto=update
-# spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/cantinhodocerrado
-# spring.datasource.username=root
-# spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/cantinhodocerrado
+spring.datasource.username=root
+spring.datasource.password=
 
 # Configuração do driver e outras propriedades JPA
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.datasource.hikari.maximum-pool-size=5  # ou outro número menor
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# # 5 ou outro número menor
+# spring.datasource.hikari.maximum-pool-size=5  
 
 spring.jpa.show-sql=true
 logging.level.org.springframework.web=DEBUG
